security/pod-security.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secure-template
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
    - name: secure
      securityContext:
        allowPrivilegeEscalation: false
